--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -1,6 +1,9 @@
 $background: #25252c;
+$background-faded: #2F2F38;
+$foreground: #3A3A45;
 $text: #F0F0FC;
 $text-faded: #D8D8E3;
-$code: #32323a;
+$code: #3A3A45;
 $primary: #b9f756;
-$secondary: #5659f7;
+$secondary: #8763F7;
+$link: #b9f756;
