--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,17 +6,6 @@
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
   </head>
   <body>
-    <div class="page">
-      <div class="sidebar" id="sidebar">
-        aaa
-      </div>
-      <div class="page-body">{{ content }}</div>
-    </div>
-
-    <script>
-      document.getElementById("sidebar").addEventListener("click", (e) => {
-        e.target.classList.toggle("closed");
-      })
-    </script>
+    {{ content }}
   </body>
 </html>
