--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -3,44 +3,15 @@
 @import "theme";
 @import "rouge";
 @import "markdown";
+@import "scrollbar";
 
-@import "sidebar";
+@import "page";
+
+// @import "sidebar";
 
 html {
-  // background: red;
-  // font-size: 32px;
   font-family: GoogleRoboto;
   font-size: 16px;
   color: $text;
-  background-color: $background;
-}
-
-body {
-  margin: 0px;
-  box-sizing: border-box;
-  width: 100vw;
-  height: 100vh;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-}
-
-.page {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  position: relative;
-  box-sizing: border-box;
-  width: 100%;
-  height: 100%;
-}
-
-.page-body {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  border: 1px solid blue;
-  overflow-y: auto;
-  padding: 16px;
-  box-sizing: border-box;
+  background-color: $background-faded;
 }
