[WIP] Layout updates

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,13 @@
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
   </head>
-  <body>
-    {{ content }}
+  <body class="doc">
+    {% include navbar.html %}
+
+    <div class="body">
+      <div class="content">
+        <div class="body">{{ content }}</div>
+      </div>
+    </div>
   </body>
 </html>
