--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,3 +1,47 @@
-<div class="sidebar">
+<script>
+  function selectOnChange(e) {
+    console.log(e);
+    console.log("{{ site.baseurl }}/docs/" + e.options[e.selectedIndex].value);
+    window.location.href = "{{ site.baseurl }}/docs/" + e.options[e.selectedIndex].value
+  }
+</script>
 
+{% assign version = page.collection %}
+{% assign category_groups = site[version] | group_by: "category" | sort: "name" %}
+
+<div class="sidebar">
+  <div class="select">
+    <select name="versions" onchange="selectOnChange(this)">
+      {% for collection in site.collections %}
+        {% if collection.label != "posts" %}
+          {% if collection.label == version %}
+            <option id="{{collection.label}}" selected="true">{{collection.label}}</option>
+          {% else %}
+            <option id="{{collection.label}}">{{collection.label}}</option>
+          {% endif %}
+        {% endif %}
+      {% endfor %}
+    </select>
+  </div>
+
+  {% for category_group in category_groups %}
+    <div class="section">
+      <div class="section-title">
+        {% if category_group.name == "" %}
+          General
+        {% else %}
+          {{ category_group.name }}
+        {% endif %}
+      </div>
+      <div class="section-body">
+        {% for item in category_group.items %}
+          {% if item.url == page.url %}
+            <div class="section-body-item active">{{ item.title }}</div>
+          {% else %}
+            <a href="{{ site.baseurl }}{{ item.url }}" class="section-body-item">{{ item.title }}</a>
+          {% endif %}
+        {% endfor %}
+      </div>
+    </div>
+  {% endfor %}
 </div>
