--- a/_layouts/doc.html
+++ b/_layouts/doc.html
@@ -4,62 +4,44 @@
     <meta charset="utf-8" />
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
-  </head>
-  <body class="docs">
-
-    {% assign version = page.collection %}
-    <div class="navbar">
-      <div class="icon">
-        <svg fill="inherit" height="26" aria-hidden="true" viewBox="0 0 16 16" version="1.1" width="26" data-view-component="true">
-          <path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
-        </svg>
-      </div>
-
-      <div class="title">{{ site.title }}</div>
-
-      <div>
-        <select name="versions">
-          {% for collection in site.collections %}
-            {% if collection.label != "posts" %}
-              {% if collection.label == version %}
-                <option id="{{collection.label}}" selected="true">{{collection.label}}</option>
-              {% else %}
-                <option id="{{collection.label}}">{{collection.label}}</option>
-              {% endif %}
-            {% endif %}
-          {% endfor %}
-        </select>
-      </div>
-    </div>
-
-    {% assign category_groups = site[version] | group_by: "category" | sort: "name" %}
-    <div class="page">
-      <div class="sidebar">
-        {% for category_group in category_groups %}
-          <div class="section">
-            <div class="title">
-              {% if category_group.name == "" %}
-                General
-              {% else %}
-                {{ category_group.name }}
-              {% endif %}
-            </div>
-            <div class="body">
-              {% for item in category_group.items %}
-              <div>&#8226;
-                {% if item.url == page.url %}
-                  {{ item.title }}
-                {% else %}
-                  <a href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a>
-                {% endif %}
-              </div>
-              {% endfor %}
-            </div>
-          </div>
+    {% if page.test %}
+    {% include cdn/highlight.html %}
+    
+    <script src="{{ "/assets/js/test-builder.js?v=" | append: site.github.build_revision | relative_url }}"></script>
+      {% if page.scripts %}
+        {% for script in page.scripts %}
+          <script src="{{ script.src }}"></script>
         {% endfor %}
-      </div>
+      {% endif %}
+    {% endif %}
+  </head>
+  <body class="doc">
+    <script>
+      // TODO: Implement portrait mode
+      // window.addEventListener("resize", () => {
+      //   // Landscape
+      //   if (window.innerWidth > window.innerHeight) {
+      //     if (document.body.classList.contains("portrait")) {
+      //       document.body.classList.remove("portrait");
+      //     }
+      //   } 
+      //   // Portrait
+      //   else {
+      //     if (!document.body.classList.contains("portrait")) {
+      //       document.body.classList.add("portrait");
+      //     }
+      //   }
+      // });
+    </script>
 
-      <div class="content">{{ content }}</div>
+    {% include navbar.html %}
+
+    <div class="body">
+      {% include sidebar.html %}
+
+      <div class="content">
+        <div class="body">{{ content }}</div>
+      </div>
     </div>
   </body>
 </html>
