--- a/_sass/rouge.scss
+++ b/_sass/rouge.scss
@@ -1,3 +1,4 @@
+/*https://github.com/StylishThemes/Syntax-Themes/tree/master/pygments/css-github*/
 /*! tomorrow night; https://github.com/MozMorris/tomorrow-pygments */
 .highlight, .highlight pre, .highlight table { background: #1d1f21 !important; color: #c5c8c6 !important; }
 .highlight .hll { background-color: #373b41 !important; }
